@@ -1,20 +1,23 @@
 package com.rsr.order_microservice.domain.service.impl;
 
+import com.rsr.order_microservice.domain.model.Item;
 import com.rsr.order_microservice.domain.model.Order;
 import com.rsr.order_microservice.domain.model.Product;
 import com.rsr.order_microservice.domain.service.interfaces.OrderRepository;
 import com.rsr.order_microservice.domain.service.interfaces.ProductRepository;
-import com.rsr.order_microservice.port.config.RabbitMQConfig;
+import com.rsr.order_microservice.port.user.dto.OrderDTO;
 import com.rsr.order_microservice.port.user.dto.OrderRequestDTO;
 import com.rsr.order_microservice.port.user.dto.PaymentRequestDTO;
-import com.rsr.order_microservice.port.user.producer.OrderProducer;
-import org.springframework.amqp.rabbit.core.RabbitTemplate;
+import com.rsr.order_microservice.port.user.producer.EmailProducer;
+import com.rsr.order_microservice.port.user.producer.PaymentProducer;
+import com.rsr.order_microservice.utils.exceptions.UnknownProductIdException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
@@ -27,50 +30,69 @@ public class OrderService {
     private ProductRepository productRepository;
 
     @Autowired
-    private OrderProducer orderProducer;
+    private PaymentProducer paymentProducer;
+
+    @Autowired
+    private EmailProducer emailProducer;
 
     public Order createOrder(OrderRequestDTO orderRequest) {
-        Order order = new Order();
-        order.setUserId(orderRequest.getUserId());
-        order.setFirstName(orderRequest.getFirstName());
-        order.setLastName(orderRequest.getLastName());
-        order.setEmail(orderRequest.getEmail());
-        order.setAddress(orderRequest.getAddress());
-        order.setPaymentInfo(orderRequest.getPaymentInfo());
+        List<Item> items = orderRequest.getBoughtItems().stream()
+                .map(itemRequest -> {
+                    // Produkt anhand der ID in der Datenbank suchen
+                    Product product = productRepository.findById(itemRequest.getProductId())
+                            .orElseThrow(() -> new UnknownProductIdException());
 
-        List<Product> products = orderRequest.getBoughtProducts().stream()
-                .map(productRequest -> new Product(
-                        null,
-                        productRequest.getProductId(),
-                        productRequest.getPrice(),
-                        productRequest.getSort(),
-                        productRequest.getQuantity()
-                )).collect(Collectors.toList());
+                    // Produktinformationen in ein Item-Objekt übertragen
+                    return new Item(
+                            product.getProductId(),
+                            product.getProductName(),
+                            product.getPriceInEuro(),
+                            itemRequest.getQuantity()
+                    );
+                }).toList();
 
-        order.setProducts(products);
-        order.setPaymentCompleted(false);
-        order.setOrderCreationTime(LocalDateTime.now());
+        Order order = new Order(
+                UUID.randomUUID(),
+                orderRequest.getUserId(),
+                orderRequest.getFirstName(),
+                orderRequest.getLastName(),
+                orderRequest.getEmail(),
+                orderRequest.getAddress(),
+                orderRequest.getPaymentInfo(),
+                false,
+                LocalDateTime.now(),
+                items,
+                0
+        );
+        order.setTotalPrice(order.getTotalPrice());
 
         Order savedOrder = orderRepository.save(order);
 
         // Sende die Zahlungsanfrage an RabbitMQ
-        PaymentRequestDTO paymentRequest = new PaymentRequestDTO(order.getUserId(), savedOrder.getTotalPrice(), order.getPaymentInfo());
-        orderProducer.sendPaymentRequest(paymentRequest);
+        sendPaymentRequest(savedOrder);
+        //sende Email mit Daten
+        sendOrderToEmail(savedOrder);
 
         return savedOrder;
     }
 
-    public void updateProduct(Product product) {
-        productRepository.save(product);
+    private void sendPaymentRequest(Order order) {
+        PaymentRequestDTO paymentRequest = new PaymentRequestDTO(order.getUserId(), order.getTotalPrice(), order.getPaymentInfo());
+        paymentProducer.sendPaymentRequest(paymentRequest);
     }
 
-    public void completePayment(Long orderId) {
+    private void sendOrderToEmail(Order order) {
+        OrderDTO orderToSend = new OrderDTO(order.getId(), order.getUserId(), order.getFirstName(), order.getLastName(), LocalDateTime.now() , order.getEmail(), order.getItems());
+        emailProducer.sendOrdertoEmail(orderToSend);
+    }
+
+    public void completePayment(UUID orderId) {
         Order order = orderRepository.findById(orderId).orElseThrow(() -> new IllegalArgumentException("Invalid order ID"));
         order.setPaymentCompleted(true);
         orderRepository.save(order);
     }
 
-    public Optional<Order> getOrder(Long id) {
+    public Optional<Order> getOrder(UUID id) {
         return orderRepository.findById(id);
     }
 }
